# House-Price-Prediction

./: .gitignore  README.md
Api/: main.py  pyproject.toml
Model/: log.txt  main.py  pyproject.toml
Model/saved_models/: house_price_model.pkl
UI/: index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  renderer.js  style.css
